# TA_project

./: Barcode.cpp  Barcode.h  Bestemming.cpp  Bestemming.h  Brzozowski.cpp  Brzozowski.h  CMakeLists.txt  Datastructuur.cpp  Datastructuur.h  Dzhem.cpp  Dzhem.h  HowToUseGui.md  Importer.cpp  Importer.h  Maksim.cpp  Maksim.h  Plotter.cpp  Plotter.h  README.md  Verdeling.md  codingConventies.txt  main.cpp
AlgoritmesControlesysteem/: DFA.cpp  DFA.h  ENFA.cpp  ENFA.h  RE.cpp  RE.h  State.cpp  State.h  json.hpp
DFAtoRE/: DFA_Inte.cpp  DFA_Inte.h  RE_Inte.cpp  RE_Inte.h
TFA Inte/: DFA.cpp  DFA.h  State.cpp  State.h  json.hpp  main.cpp
TFAToDFAFiles/: TFA.json
TFA_Inte/: TFA.cpp  TFA.h  TFA_State.cpp  TFA_State.h
TestenBrzozowski/: OorspronkelijkeFile.json  Test1.json  Test10.json  Test11.json  Test2.json  Test3.json  Test4.json  Test5.json  Test6.json  Test7.json  Test8.json  Test9.json  input-tfa2.json  input-tfa3.json  input-tfa4.json  input-tfa5.json  input-tfa6.json  reachableTest.json
engine/: Hulpfuncties.cpp  Hulpfuncties.h  L2Dsysteem.cpp  L2Dsysteem.h  L3Dsysteem.cpp  L3Dsysteem.h  Lsysteem.cpp  Lsysteem.h  ZBuffer.cpp  ZBuffer.h  drawTriangles.cpp  drawTriangles.h  easy_image.cc  easy_image.h  engine.cc  engine.h  l_parser.cc  l_parser.h
xmlfiles/: importerTest44.xml  test1.xml
